Null-safety, TurSolrField ctor & tests cleanup
Add null checks to locale comparisons to avoid NPEs in TurSNSiteFieldExtAPI, relax TurSolrField constructor visibility (still throws) and update tests accordingly. Modernize many unit tests: switch to AssertJ fluent assertions, use parameterized tests, group assertions, replace equality checks with isZero/hasToString, and simplify Mockito invocations for MBean attribute mocks. These are mostly refactors and safety fixes with no intended functional change.